[package]
name = "lifeline"
version = "0.6.1"
description = "Lifeline is a dependency injection library for asynchronous message-based applications."
keywords = ["async", "tokio", "async", "actor", "actors"]
categories = ["asynchronous", "rust-patterns", "web-programming"]
readme = "README.md"
authors = ["Austin Jones <implAustin@gmail.com>"]
documentation = "https://docs.rs/lifeline/"
homepage = "https://github.com/austinjones/lifeline-rs"
repository = "https://github.com/austinjones/lifeline-rs"
edition = "2018"
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
postage = { version = "0.4", optional = true }
pin-project = "0.4.23"
futures-util = { version = "0.3", default-features = false }

async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"

log = "0.4"
regex = "1.3"

tokio = { version = "1.0", default-features = false, optional = true }
async-std = { version = "1.9", default-features = false, optional = true }

[dev-dependencies]
anyhow = "1.0"
simple_logger = "1.9"
tokio = { version = "1.0", features = ["sync", "time", "macros", "rt-multi-thread"] }

[features]
default = ["dyn-bus", "tokio-executor", "tokio-channels", "postage-channels"]

dyn-bus = []

tokio-executor = ["tokio/rt"]
tokio-channels = ["tokio/sync"]

async-std-executor = ["async-std/default"]
async-std-channels = ["async-std/unstable"]
async-std-attributes = ["async-std/attributes"]

postage-channels = ["postage"]

subscription-channel = []

[[example]]
name = "async-std"
required-features = ["dyn-bus", "async-std-executor", "async-std-channels"]